# inferenceserver

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile.nginx  README.md  development.md  docker-compose.yml  nginx.conf  nginx.crt  nginx.key  pyproject.toml  server-cert.pem  server-key.pem  shell.py  test.py
ai_serving/: main.py  model_worker.py  models.py  object_storage.py  schemas.py  tasks.py
ai_serving/worker_templates/: common.py  init.py
alembic/: env.py
alembic/versions/: 6339d9e9fc7c_add_failed_log_to_job.py  8c124eb7fc8b_init.py
examples/imagenet/: main.py  requirements.txt  setup
examples/mnist/: main.py
mnist/: package.json
mnist/src/: App.js  App.scss
